# capabilities

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  findings.md  justfile  progress.md  scan-policy.yaml  task_plan.md
capabilities/attack-surface-management/: capability.yaml  pyproject.toml
capabilities/attack-surface-management/agents/: asm-operator.md
capabilities/attack-surface-management/agents/pipeline/: discovery-operator.md  final-reviewer.md  finding-validator.md  gadget-clusterer.md  lead-enricher.md  report-synthesizer.md  scope-normalizer.md
capabilities/attack-surface-management/mcp/: bbot.py  shodan.py
capabilities/attack-surface-management/scripts/: analyze.py
capabilities/attack-surface-management/skills/bbot-module-reference/: SKILL.md
capabilities/attack-surface-management/skills/cypher-query-playbook/: SKILL.md
capabilities/attack-surface-management/skills/screenshot-triage/: SKILL.md
capabilities/attack-surface-management/tests/: test_bbot_mcp.py  test_shodan_mcp.py  test_worker_coordinator.py
capabilities/attack-surface-management/tools/: bbot.py  findings.py  pipeline.py
capabilities/attack-surface-management/workers/: coordinator.py
capabilities/bloodhound-enterprise/: README.md  capability.yaml  pyproject.toml
capabilities/bloodhound-enterprise/agents/: attack-path-hunter.md  bhe-analyst.md  tier-zero-curator.md
capabilities/bloodhound-enterprise/runtime/: client.py  cypher_helpers.py  cypher_library.py  types.py
capabilities/bloodhound-enterprise/tests/: conftest.py  test_client.py  test_cypher_library.py  test_cypher_safety.py  test_manifest.py  test_signing.py
capabilities/bloodhound-enterprise/tools/: asset_groups.py  attack_paths.py  auth.py  cypher.py  data_ingestion.py  entities.py  posture.py
capabilities/source-code-analysis-worker-template/: README.md  capability.yaml  pyproject.toml
capabilities/source-code-analysis-worker-template/agents/: adversarial-pathfinder.md  attack-surface-mapper.md  common-vulnerability-hunter.md  cve-history-researcher.md  final-reviewer.md  finding-validator.md  recent-commit-test-reviewer.md  supply-chain-config-reviewer.md
capabilities/source-code-analysis-worker-template/scripts/: analyze.py  keepalive.py  restart.py
capabilities/source-code-analysis-worker-template/tests/: conftest.py  test_coordinator.py
capabilities/source-code-analysis-worker-template/tools/: findings.py
capabilities/source-code-analysis-worker-template/workers/: coordinator.py
dreadnode/attack-surface-management/: capability.yaml  pyproject.toml
dreadnode/attack-surface-management/agents/: asm-operator.md
dreadnode/attack-surface-management/mcp/: bbot.py  shodan.py
dreadnode/attack-surface-management/tests/: test_bbot_mcp.py  test_shodan_mcp.py
dreadnode/attack-surface-management/tools/: FUTURE_TOOLS.md  bbot.py
dreadnode/dotnet-reversing/: capability.yaml  pyproject.toml
dreadnode/dotnet-reversing/agents/: dotnet-reversing-agent.md
dreadnode/dotnet-reversing/dotnet_agent/: __main__.py  reversing.py  tool.py
dreadnode/dotnet-reversing/tools/: reporting.py  reversing.py
dreadnode/sast/: capability.yaml  pyproject.toml
dreadnode/sast/agents/: sast-agent.md
dreadnode/sast/skills/: README.md  ci-cd-security.md  codeql-handoff.md  codeql.md  compliance-check.md  false-positive-filters.md  file-construction-libraries.md  fix-review.md  report-writer.md  review-code.md  sarif-parsing-handoff.md  secure-code-patterns.md  semgrep-handoff.md  supply-chain-security.md  threat-modeling.md  triage-priority.md
dreadnode/sast/skills/sarif-parsing/: SKILL.md
dreadnode/sast/tools/: __init__.py  asn1_builder.py  codeql.py  codesearch.py  diff.py  editing.py  exploration.py  file_construction.py  git_tools.py  review_highlight.py  think.py  vulnerability_reporter.py
(+1080 files in other folders)
