[project]
name = "attack-surface-management"
version = "1.1.27"
requires-python = ">=3.10"
dependencies = [
    "badsecrets~=0.13.47",
    "baddns~=1.12.294",
    "bbot",
    "aiosqlite>=0.21.0",
    "extractous~=0.3.0",
    "asyncpg>=0.31.0",
    "dnspython>=2.7.0,<2.8.0",
    "fastmcp>=2.0",
    "neo4j>=5.28.1",
    "shodan>=1.31.0",
    "aiodocker>=0.24.0",
    "tldextract>=5.3.1,<6.0.0",
    "pillow>=11.3.0",
    "pyOpenSSL~=25.3.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]
