[project]
name = "bloodhound-enterprise"
version = "0.1.0"
description = "BloodHound Enterprise REST API capability for Dreadnode"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runtime", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
