[project]
name = "source-code-analysis-worker-template"
version = "0.1.0"
description = "Reference template for a worker-coordinated multi-agent source-analysis capability."
requires-python = ">=3.11"
dependencies = ["dreadnode>=2.0.15"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
