[project]
name = "dotnet-agent-tools"
version = "0.1.0"
description = ".NET binary analysis capability for dreadcode"
requires-python = ">=3.11"
dependencies = [
    "pythonnet>=3.0.5",
    "aiohttp>=3.10.0",
    "loguru>=0.7.0",
]

[project.scripts]
dotnet-capability = "dotnet_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dotnet_agent"]
